--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -236,11 +236,9 @@ a {
 
 @keyframes hide-volume {
     0% {
-        width: 60px;
         opacity: 1;
     }
     100% {
-        width: 0px;
         opacity: 0;
     }
 }
@@ -583,16 +581,18 @@ a {
 
 .slider-helper {
     display: none;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
     text-align: center;
     position: absolute;
     background: var(--handleWhite);
     color: #000000;
     flex-direction: column;
-    justify-content: center;
     border-radius: 10px;
-    width: 40px;
+    width: auto;
+    min-width: 40px;
+    padding: 0px 4px;
     height: 20px;
     margin-top: -40px;
     box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.25)
@@ -604,13 +604,11 @@ a {
     color: var(--handleWhite);
     bottom: -10px;
     top: initial;
-    margin-left: 5px;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     border-top: 10px solid;
     border-bottom: 0;
     border-top-color: inherit;
-    left: 5px;
 }
 
 .notification {
