--- a/extension/css/side-panel.css
+++ b/extension/css/side-panel.css
@@ -5,6 +5,10 @@
 
 .popup-btn-container {
     position: absolute;
-    right: 5px;
+    right: 0px;
     top: 0px;
+    cursor: pointer;
+    border-radius: 0px 0px 0px 5px;
+    padding: 0px 4px 2px 4px;
+    transition: 0.45s;
 }
