--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -509,7 +509,7 @@ a {
     position: relative;
     cursor: pointer;
 }
-.handle-helper {
+.handle-toltip {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -595,7 +595,7 @@ a {
     margin-top: calc((var(--progress-handle-size) - var(--progress-height)) / -2);
 }
 
-.slider-helper {
+.slider-toltip {
     display: none;
     flex-direction: row;
     justify-content: center;
@@ -614,7 +614,7 @@ a {
     box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.25)
 }
 
-.slider-helper::before {
+.slider-toltip::before {
     content: "";
     position: absolute;
     color: var(--handleWhite);
