--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -62,17 +62,20 @@ body {
     -webkit-transform: rotate(135deg) translate(4px, -3.5px);
     transform: rotate(135deg) translate(4px, -3.5px);
     width: 20px;
+    opacity: 1;
 }
 
 .change-list .bar-list3 {
     -webkit-transform: rotate(45deg) translate(-5px, -5px);
     transform: rotate(45deg) translate(-5px, -5px);
     width: 20px;
+    opacity: 1;
 }
 .playlist-open {
     background-color: rgb(0 0 0 / 10%);
     backdrop-filter: blur(2px);
     border-bottom-left-radius: 5px;
+    z-index: 3;
 }
 .modal-list-menu-popup {
     display: none;
