--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -412,7 +412,7 @@ body {
         font-size: 25px;
         margin: auto;
         line-height: unset;
-        font-weight: bold;
+        font-weight: 500;
     }
     #AppQuestion {
         font-size: 20px;
