--- a/extension/css/side-panel.css
+++ b/extension/css/side-panel.css
@@ -5,10 +5,13 @@
 
 .popup-btn-container {
     position: absolute;
-    right: 0px;
+    right: 2px;
     top: 0px;
     cursor: pointer;
     border-radius: 0px 0px 0px 5px;
     padding: 0px 4px 2px 4px;
     transition: 0.45s;
+}
+.title-list {
+    margin: 5px 4px;
 }
